<resources>
    <string name="app_name">FreeTracker</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_history_view">HistoryView</string>


    <string name="menu_main_title_history">История</string>
    <string name="menu_main_title_settings">Настройки</string>
    <string name="menu_main_title_promotion">Реклама</string>
    <string name="menu_main_title_delalldata">Очистить историю</string>



    <string name="distance">Distance</string>
    <string name="duration">Duration</string>
    <string name="avgspeed">Avg.Speed</string>


    <string name="marker_start">Старт</string>
    <string name="marker_finish">Финиш</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
