<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_item_history"
        android:icon="@drawable/ic_date_range_white_18dp"
        android:title="@string/menu_main_title_history"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/menu_main_title_settings"
        android:orderInCategory="2"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_item_promotion"
        android:title="@string/menu_main_title_promotion"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <group
        android:id="@+id/test_group">

        <item
            android:id="@+id/menu_item_delalldata"
            android:title="@string/menu_main_title_delalldata"
            android:orderInCategory="200"
            app:showAsAction="never"/>
    </group>

</menu>