<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/abc_primary_text_material_light"
        android:text="нету"
        android:id="@+id/date"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/distance_label"
        android:text="@string/distance"
        android:textSize="20dp"
        android:layout_below="@+id/date"
        android:layout_alignLeft="@+id/date"
        android:layout_alignStart="@+id/date"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="20dp"
        android:id="@+id/duration_label"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_alignTop="@+id/avgspeed_label"
        android:layout_toRightOf="@+id/distance_label"
        android:layout_toEndOf="@+id/distance_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avgspeed"
        android:textSize="20dp"
        android:id="@+id/avgspeed_label"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_alignTop="@+id/distance_label"
        android:layout_toRightOf="@+id/duration_label"
        android:layout_toEndOf="@+id/duration_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="10.5 км"
        android:id="@+id/tv_distance"
        android:layout_below="@+id/distance_label"
        android:layout_alignLeft="@+id/distance_label"
        android:layout_alignStart="@+id/distance_label"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="30 мин"
        android:id="@+id/tv_duration"
        android:layout_alignTop="@+id/tv_distance"
        android:layout_alignLeft="@+id/duration_label"
        android:layout_alignStart="@+id/duration_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="10 км/ч"
        android:id="@+id/tv_avgspeed"
        android:layout_alignTop="@+id/tv_duration"
        android:layout_alignLeft="@+id/avgspeed_label"
        android:layout_alignStart="@+id/avgspeed_label" />
</RelativeLayout>
